--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
     "styled-component": "^2.8.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
