--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.0.0",
+    "@studio-freight/lenis": "^1.0.28",
     "gsap": "^3.12.2",
     "gsap-trial": "^3.12.2",
     "locomotive-scroll": "^4.1.4",
